--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,12 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Github user search</title>
-    # <%= javascript_include_tag "jquery.js" %>
-    # <%= javascript_include_tag "angular.js" %>
-    # <%= javascript_include_tag "angular-resource.js" %>
-    # <%= javascript_include_tag "app.js" %>
-    # <%= javascript_include_tag "searchFactory.js" %>
-    # <%= javascript_include_tag "gitUserSearchController.js" %>
+    <%=javascript_include_tag "application"%>
   </head>
 
   <body ng-controller="GitUserSearchController as searchCtrl">
